image location updated

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 <div class="top-container">
-    <img src="/gifs/clouds.gif" alt="cloud-img" class="top_cloud">
+    <img src="gifs/clouds.gif" alt="cloud-img" class="top_cloud">
     <h1 style="padding-top: 150px;">I'm Tahmid.</h1>
     <h2>a banker learning to code.</h2>
-    <img src="/images/london-silhouette.png" alt="london-img" class="london">
+    <img src="images/london-silhouette.png" alt="london-img" class="london">
     </div>
 <hr>
   <div class="profile">
@@ -29,17 +29,17 @@
 
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="skills_image" src="/gifs/report.gif" alt="">
+      <img class="skills_image" src="gifs/report.gif" alt="">
       <h3>Banking </h3>
       <p>I have a firm grasp in operations banking, having entered the industry at a very young age. I have a wealth of experience starting from back office, middle office and all the way to front office trade support.</p>
     </div>
     <div class="skill-row">
-      <img class="skills_image_right" src="/gifs/programming.gif" alt="">
+      <img class="skills_image_right" src="gifs/programming.gif" alt="">
       <h3>Coding</h3>
       <p>I have taught myself to code in Python, CSS and SQL. i am always looking to build on this, eventually making my way into the Fintech Artificial Intelligence industry.</p>
     </div>
       <div class="skill-row">
-        <img class="skills_image" src="/gifs/HTML.gif" alt="">
+        <img class="skills_image" src="gifs/HTML.gif" alt="">
         <h3>HTML / CSS</h3>
         <p>I am well versed in HTML5 and CSS. although not a designer by trade, I know what makes a good website, and a good User Interface.</p>
 
